Fix comments for PR